# AdvDiffSolvers

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  attest  command_couette  command_radial  input2d  input2d.annulus  input2d.couette  input2d.disk  input2d.radial  main.cpp
examples/: CMakeLists.txt
examples/complex_fluids/: CMakeLists.txt  IBBoundaryMeshMapping.cpp  IBBoundaryMeshMapping.h  VECFStrategy.cpp  VECFStrategy.h  input2d  main.cpp
examples/compressible/: CMakeLists.txt  input2d  main.cpp
examples/couette/: CMakeLists.txt  InsideLSFcn.cpp  InsideLSFcn.h  Makefile  OutsideLSFcn.cpp  OutsideLSFcn.h  QFcn.cpp  QFcn.h  convergence_tester.cpp  input2d  input2d.convergence  main.cpp
examples/couette_two_ls/: Makefile  OutsideLSFcn.cpp  OutsideLSFcn.h  QFcn.cpp  convergence_tester.cpp  input2d.convergence  input2d.couette  main.cpp
examples/disk/: CMakeLists.txt  ForcingFcn.cpp  ForcingFcn.h  InsideLSFcn.cpp  Makefile  QFcn.cpp  QFcn.h  SurfaceBoundaryReactions.cpp  SurfaceBoundaryReactions.h  input2d  input2d.velocity  main.cpp
examples/flow_past_cylinder/: input2d.velocity  main.cpp
examples/fpc/: CMakeLists.txt  InsideLSFcn.cpp  InsideLSFcn.h  QFcn.cpp  QFcn.h  SurfaceBoundaryReactions.cpp  SurfaceBoundaryReactions.h  input2d  main.cpp
examples/level_set/: CMakeLists.txt
examples/peristalsis/: CMakeLists.txt  QFcn.cpp  input2d  main.cpp
examples/pipe_flow/: CMakeLists.txt  InsideLSFcn.cpp  InsideLSFcn.h  Makefile  QFcn.cpp  QFcn.h  SurfaceBoundaryReactions.cpp  SurfaceBoundaryReactions.h  input2d  input2d.pressure  input2d.velocity  main.cpp
examples/pipe_flow_no_ins/: CMakeLists.txt  LSPipeFlow.cpp  LSPipeFlow.h  Makefile  QFcn.cpp  QFcn.h  SurfaceBoundaryReactions.cpp  SurfaceBoundaryReactions.h  convergence_tester.cpp  input2d  input2d.convergence  input2d.pressure  input2d.velocity  main.cpp
examples/pipe_flow_no_struct/: CMakeLists.txt  InsideLSFcn.cpp  InsideLSFcn.h  QFcn.cpp  QFcn.h  input2d  main.cpp
examples/radial/: CMakeLists.txt  Makefile  QFcn.cpp  QFcn.h  RadialBoundaryCond.cpp  RadialBoundaryCond.h  SetLSValue.cpp  command_radial  convergence_tester.cpp  input2d  input2d.convergence  input2d.radial  input3d  main.cpp
examples/reacting_couette/: CMakeLists.txt  InsideBoundaryConditions.cpp  InsideBoundaryConditions.h  InsideLSFcn.cpp  OutsideBoundaryConditions.cpp  OutsideBoundaryConditions.h  OutsideLSFcn.cpp  OutsideLSFcn.h  QFcn.cpp  QFcn.h  convergence_tester.cpp  input2d  main.cpp
examples/reacting_couette_flow/: InsideBoundaryConditions.h  InsideLSFcn.cpp  InsideLSFcn.h  Makefile  OutsideBoundaryConditions.cpp  OutsideBoundaryConditions.h  OutsideLSFcn.cpp  OutsideLSFcn.h  convergence_tester.cpp  input2d.couette  main.cpp
examples/rotational/: CMakeLists.txt  LSFcn.cpp  LSFcn.h  Makefile  QFcn.cpp  QFcn.h  RadialBoundaryCond.cpp  RadialBoundaryCond.h  convergence_tester.cpp  input2d  input2d.convergence  main.cpp
examples/semi_lagrangian/: CMakeLists.txt
examples/solvers/: CMakeLists.txt
src/: AdvectiveReconstructionOperator.cpp  BoundaryReconstructCache.cpp  CMakeLists.txt  CutCellMeshMapping.cpp  CutCellVolumeMeshMapping.cpp  FDWeightsCache.cpp  FEMeshPartitioner.cpp  GeneralBoundaryMeshMapping.cpp  GhostPoints.cpp  GlobalIndexing.cpp  IntegrateFunction.cpp  LSAdvDiffIntegrator.cpp  LSCartGridFunction.cpp  LSCutCellBoundaryConditions.cpp  LSCutCellLaplaceOperator.cpp  LSFindCellVolume.cpp  LSFromLevelSet.cpp  LSFromMesh.cpp  LinearReconstructions.cpp  MLSReconstructCache.cpp  QInitial.cpp  RBFFDWeightsCache.cpp  RBFReconstructCache.cpp  RBFReconstructions.cpp  ReconstructCache.cpp  SBAdvDiffIntegrator.cpp  SBBoundaryConditions.cpp  SBIntegrator.cpp  SBSurfaceFluidCouplingManager.cpp  SLAdvIntegrator.cpp  SemiLagrangianAdvIntegrator.cpp  SetLSValue.cpp  VolumeBoundaryMeshMapping.cpp  ZSplineReconstructions.cpp  ls_functions.cpp  reconstructions.cpp
src/adv_ops/: InterpDivergenceReconstructions.cpp  LagrangeReconstructions.cpp  LagrangeStructureReconstructions.cpp  LinearReconstructions.cpp  PPMReconstructions.cpp  RBFDivergenceReconstructions.cpp  RBFReconstructions.cpp  RBFStructureReconstructions.cpp  WENOReconstructions.cpp  WENOStructureReconstructions.cpp  ZSplineReconstructions.cpp
src/cut_cell/: CutCellMeshMapping.cpp  CutCellVolumeMeshMapping.cpp
src/fortran/: advection_routines2d.f.m4  advection_routines3d.f.m4
src/integrators/: AdvDiffImplicitIntegrator.cpp  ExtrapolatedAdvDiffHierarchyIntegrator.cpp  LSAdvDiffIntegrator.cpp  SBAdvDiffIntegrator.cpp  SBIntegrator.cpp  SLAdvIntegrator.cpp
src/level_set/: ExtrapolatedConvectiveOperator.cpp  InternalBdryFill.cpp  LSCartGridFunction.cpp  LSFindCellVolume.cpp  LSFromLevelSet.cpp  LSFromMesh.cpp  ReinitializeLevelSet.cpp  ls_functions.cpp
src/rbffd/: GhostPoints.cpp  PointList.cpp  RBFFDWeightsCache.cpp
src/reconstructions/: BoundaryReconstructCache.cpp  MLSReconstructCache.cpp  RBFReconstructCache.cpp  ReconstructCache.cpp  reconstructions.cpp
src/sharp_interface/: CCSharpInterfaceFACPreconditionerStrategy.cpp  CCSharpInterfaceLaplaceOperator.cpp  CCSharpInterfaceScheduledJacobiSolver.cpp  IndexElemMapping.cpp  SIData.cpp  SharpInterfaceGhostFill.cpp  sharp_interface_utilities.cpp
src/solvers/: ConditionCounter.cpp  FullFACPreconditioner.cpp  LSCutCellLaplaceOperator.cpp  PETScAugmentedKrylovLinearSolver.cpp  PETScAugmentedLinearOperator.cpp  PETScPoissonSolver.cpp  RBFFDPoissonSolver.cpp  RBFLaplaceOperator.cpp  RBFPoissonSolver.cpp  SBBoundaryConditions.cpp
src/surfaces/: FESystemManager.cpp  FEToHierarchyMapping.cpp  GeneralBoundaryMeshMapping.cpp  SBSurfaceFluidCouplingManager.cpp  VolumeBoundaryMeshMapping.cpp  surface_utilities.cpp
src/utilities/: IntegrateFunction.cpp  PointwiseFunction.cpp  ls_functions.cpp  solver_utilities.cpp
tests/: CMakeLists.txt  link-test-files.sh
tests/SRJ/: SRJLaplaceSolver.cpp  SRJLaplaceSolver.h  srj_solve.cpp
tests/adv_ops/: divergence.cpp  divergence_2d.input  divergence_2d.interp.input  divergence_2d.interp.output  divergence_2d.output  divergence_2d.rbffd.input  (+1 more)
(+425 files in other folders)
